--- a/index.html
+++ b/index.html
@@ -538,95 +538,96 @@
       --dashboard-status-na:rgba(148,163,184,0.14);
       --dashboard-status-na-text:#475569;
     }
-    .practice-dashboard.goal-modal{ display:flex; align-items:center; justify-content:center; padding:clamp(1.5rem,4vw,3rem); }
+    .practice-dashboard.goal-modal{ display:flex; align-items:center; justify-content:center; padding:clamp(1.25rem,3.5vw,3.5rem); }
     .practice-dashboard.goal-modal .modal-card{ padding:0; background:transparent; box-shadow:none; border:0; }
     .practice-dashboard__card{
       position:relative;
-      width:min(1120px,90vw);
-      max-height:min(88vh,940px);
+      width:min(1240px,96vw);
+      max-height:min(94vh,980px);
       display:grid;
       grid-template-rows:auto 1fr auto;
       gap:0;
       padding:0;
       background:#fff;
       border-radius:1.5rem;
-      border:1px solid rgba(15,23,42,0.12);
-      box-shadow:0 28px 52px rgba(15,23,42,0.18);
+      border:1px solid rgba(15,23,42,0.08);
+      box-shadow:0 20px 44px rgba(15,23,42,0.14);
       overflow:hidden;
     }
     .practice-dashboard__header{
       display:flex;
       flex-wrap:wrap;
-      align-items:flex-start;
+      align-items:flex-end;
       justify-content:space-between;
-      gap:1.5rem;
+      gap:1.75rem;
       padding:clamp(1.6rem,2.8vw,2.1rem) clamp(1.6rem,3vw,2.4rem) clamp(1.2rem,2.4vw,1.6rem);
       background:#fff;
       border-bottom:1px solid rgba(148,163,184,0.16);
     }
-    .practice-dashboard__title-group{ display:flex; flex-direction:column; gap:.55rem; max-width:min(520px,100%); }
-    .practice-dashboard__context{ display:inline-flex; align-items:center; gap:.4rem; padding:.35rem .8rem; border-radius:.85rem; background:rgba(59,130,246,0.08); color:#1d4ed8; font-size:.78rem; font-weight:600; letter-spacing:.02em; width:max-content; }
-    .practice-dashboard__title{ font-size:1.65rem; font-weight:700; color:#0f172a; letter-spacing:-.02em; margin:0; }
-    .practice-dashboard__subtitle{ font-size:.92rem; color:#475569; line-height:1.6; max-width:600px; margin:0; }
+    .practice-dashboard__title-group{ display:flex; flex-direction:column; gap:.45rem; max-width:min(560px,100%); flex:1 1 320px; }
+    .practice-dashboard__context{ display:inline-flex; align-items:center; gap:.35rem; padding:.4rem .85rem; border-radius:999px; background:rgba(59,130,246,0.08); color:#1d4ed8; font-size:.75rem; font-weight:600; letter-spacing:.14em; text-transform:uppercase; width:max-content; }
+    .practice-dashboard__title{ font-size:2rem; font-weight:700; color:#0f172a; letter-spacing:-.025em; margin:0; line-height:1.15; }
+    .practice-dashboard__subtitle{ font-size:.95rem; color:#5b6b83; line-height:1.65; max-width:620px; margin:0; font-weight:500; }
     .practice-dashboard__header-actions{
       display:flex;
-      align-items:flex-end;
-      gap:.85rem;
+      align-items:center;
+      gap:1rem;
       flex-wrap:wrap;
       justify-content:flex-end;
+      min-width:260px;
     }
     .practice-dashboard__close{ border-color:transparent; background:#e2e8f0; color:#0f172a; transition:background .15s ease; }
     .practice-dashboard__close:hover{ background:#cbd5f5; }
     .practice-dashboard__close:focus-visible{ outline:3px solid var(--accent-200); outline-offset:2px; }
     .practice-dashboard__body{
       overflow-y:auto;
-      padding:clamp(1.5rem,2.6vw,2.1rem) clamp(1.5rem,3vw,2.4rem);
+      padding:clamp(1.65rem,2.8vw,2.25rem) clamp(1.65rem,3.2vw,2.6rem) clamp(1.5rem,2.5vw,2.15rem);
       display:flex;
       flex-direction:column;
-      gap:1.35rem;
+      gap:1.6rem;
       background:#f8fafc;
       min-height:0;
     }
     .practice-dashboard__section{
       display:flex;
       flex-direction:column;
-      gap:1rem;
+      gap:1.1rem;
       background:#fff;
-      border-radius:1.1rem;
-      padding:clamp(1.1rem,2vw,1.65rem);
-      border:1px solid rgba(148,163,184,0.14);
-      box-shadow:0 8px 22px rgba(15,23,42,0.07);
+      border-radius:1.25rem;
+      padding:clamp(1.2rem,2.2vw,1.75rem);
+      border:1px solid rgba(148,163,184,0.12);
+      box-shadow:0 10px 26px rgba(15,23,42,0.06);
     }
-    .practice-dashboard__section-head{ display:flex; align-items:flex-start; justify-content:space-between; gap:1rem; flex-wrap:wrap; }
-    .practice-dashboard__section-title{ font-weight:700; font-size:1.05rem; color:#0f172a; letter-spacing:-.01em; }
-    .practice-dashboard__section-subtitle{ font-size:.85rem; color:#64748b; margin:0; }
+    .practice-dashboard__section-head{ display:flex; align-items:flex-start; justify-content:space-between; gap:1.1rem; flex-wrap:wrap; }
+    .practice-dashboard__section-title{ font-weight:700; font-size:1.15rem; color:#0f172a; letter-spacing:-.015em; margin:0; }
+    .practice-dashboard__section-subtitle{ font-size:.83rem; color:#64748b; margin:0; }
     .practice-dashboard__chart-panel{
       display:flex;
       flex-direction:column;
-      gap:1rem;
+      gap:.85rem;
       background:#fff;
-      border-radius:1rem;
-      padding:1.05rem clamp(.95rem,2vw,1.45rem);
-      border:1px solid rgba(148,163,184,0.14);
+      border-radius:1.1rem;
+      padding:1rem clamp(.9rem,1.9vw,1.35rem) 1.1rem;
+      border:1px solid rgba(148,163,184,0.12);
       box-shadow:none;
     }
-    .practice-dashboard__chart-scroll{ border-radius:.85rem; overflow:hidden; padding:.35rem; background:#f8fafc; border:1px solid rgba(148,163,184,0.18); }
+    .practice-dashboard__chart-scroll{ border-radius:.95rem; overflow:hidden; padding:.45rem; background:#f8fafc; border:1px solid rgba(148,163,184,0.16); }
     .practice-dashboard__chart-scroll:focus-visible{ outline:3px solid var(--accent-200); outline-offset:2px; }
     .practice-dashboard__chart-scroll.is-dragging{ cursor:grabbing; user-select:none; }
     .practice-dashboard__chart-scroll::-webkit-scrollbar{ height:10px; }
     .practice-dashboard__chart-scroll::-webkit-scrollbar-thumb{ background:rgba(148,163,184,0.4); border-radius:999px; }
     .practice-dashboard__chart-card{
       position:relative;
-      border:1px solid rgba(148,163,184,0.16);
-      border-radius:.95rem;
+      border:1px solid rgba(148,163,184,0.14);
+      border-radius:1rem;
       background:#fff;
-      padding:1.1rem 1.25rem 1.35rem;
-      min-height:160px;
+      padding:1.05rem 1.15rem 1.25rem;
+      min-height:150px;
       box-shadow:none;
     }
     .practice-dashboard__chart-canvas{
       position:relative;
-      min-height:160px;
+      min-height:150px;
       width:100%;
       min-width:0;
       margin:0;
@@ -643,12 +644,12 @@
       border-radius:.75rem;
     }
     .practice-dashboard__chart-caption{
-      font-size:.82rem;
+      font-size:.8rem;
       color:#475569;
       background:#f8fafc;
       border-radius:.75rem;
-      padding:.65rem .9rem;
-      border:1px solid rgba(148,163,184,0.16);
+      padding:.55rem .85rem;
+      border:1px solid rgba(148,163,184,0.14);
       max-width:100%;
       margin:0;
     }
@@ -662,8 +663,8 @@
       padding:.4rem;
       border-radius:.9rem;
       background:#fff;
-      box-shadow:0 8px 20px rgba(15,23,42,0.08);
-      border:1px solid rgba(148,163,184,0.2);
+      box-shadow:0 8px 18px rgba(15,23,42,0.07);
+      border:1px solid rgba(148,163,184,0.18);
     }
     .practice-dashboard__view-btn{ border:0; background:transparent; padding:.5rem 1.1rem; border-radius:.75rem; font-size:.82rem; font-weight:600; color:#1f2937; cursor:pointer; transition:background .15s ease,color .15s ease,box-shadow .15s ease; }
     .practice-dashboard__view-btn:hover:not(:disabled){ background:rgba(148,163,184,0.14); }
@@ -672,36 +673,45 @@
     .practice-dashboard__view-btn:focus-visible{ outline:3px solid var(--accent-200); outline-offset:2px; }
     .practice-dashboard__filter{ display:flex; flex-direction:column; gap:.3rem; font-size:.78rem; color:#475569; }
     .practice-dashboard__filter-label{ font-weight:600; text-transform:uppercase; letter-spacing:.08em; color:#0f172a; }
-    .practice-dashboard__filter-select{ border:1px solid rgba(148,163,184,0.35); border-radius:.8rem; padding:.45rem .75rem; font-size:.9rem; color:#0f172a; background:#fff; box-shadow:0 8px 20px rgba(15,23,42,0.05); }
+    .practice-dashboard__filter-select{ border:1px solid rgba(148,163,184,0.32); border-radius:.8rem; padding:.45rem .75rem; font-size:.9rem; color:#0f172a; background:#fff; box-shadow:0 8px 18px rgba(15,23,42,0.05); }
     .practice-dashboard__filter-select:focus-visible{ outline:3px solid var(--accent-200); outline-offset:1px; border-color:var(--accent-400); }
     .practice-dashboard__filter--inline{ min-width:0; }
     .practice-dashboard__filter--inline .practice-dashboard__filter-select{ min-width:9.5rem; }
     .practice-dashboard__table-wrapper{
-      border-radius:1rem;
-      border:1px solid rgba(148,163,184,0.16);
+      border-radius:1.1rem;
+      border:1px solid rgba(148,163,184,0.14);
       background:#fff;
       overflow:auto;
       box-shadow:none;
       scrollbar-color:#94a3b8 rgba(226,232,240,0.65);
-      padding-bottom:.25rem;
+      padding:.35rem .4rem .55rem;
     }
     .practice-dashboard__table-wrapper::-webkit-scrollbar{ height:10px; }
     .practice-dashboard__table-wrapper::-webkit-scrollbar-thumb{ background:rgba(148,163,184,0.45); border-radius:999px; }
-    .practice-dashboard__matrix{ width:100%; border-collapse:collapse; table-layout:fixed; min-width:0; }
-    .practice-dashboard__matrix thead th{ position:sticky; top:0; background:var(--dashboard-header-bg); padding:.6rem .75rem; text-align:left; font-size:.68rem; text-transform:uppercase; letter-spacing:.08em; color:#64748b; border-bottom:1px solid rgba(148,163,184,0.18); z-index:2; }
+    .practice-dashboard__matrix{ width:100%; border-collapse:separate; border-spacing:0 .45rem; table-layout:fixed; min-width:0; }
+    .practice-dashboard__matrix thead th{ position:sticky; top:0; background:var(--dashboard-header-bg); padding:.75rem .85rem; text-align:left; font-size:.68rem; text-transform:uppercase; letter-spacing:.08em; color:#64748b; border-bottom:1px solid rgba(148,163,184,0.18); z-index:2; }
     .practice-dashboard__matrix-head-consigne{ width:26%; }
-    .practice-dashboard__matrix-consigne{ background:#fff; padding:.65rem .85rem; font-weight:600; color:#0f172a; text-align:left; border-bottom:1px solid rgba(148,163,184,0.14); }
+    .practice-dashboard__matrix-consigne{ background:transparent; padding:.95rem 1.25rem .95rem 1.2rem; font-weight:600; color:#0f172a; text-align:left; border-right:1px solid rgba(148,163,184,0.12); }
     .practice-dashboard__row-meta{ position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0; }
     .practice-dashboard__consigne-name{ font-size:.95rem; }
-    .practice-dashboard__matrix tbody td{ padding:.3rem 0; text-align:center; }
-    .practice-dashboard__matrix tbody tr{ border-bottom:1px solid rgba(148,163,184,0.12); }
-    .practice-dashboard__matrix tbody tr:last-child{ border-bottom:none; }
-    .practice-dashboard__matrix tbody tr:nth-child(even){ background:rgba(148,163,184,0.06); }
+    .practice-dashboard__matrix tbody tr{ position:relative; }
+    .practice-dashboard__matrix tbody tr::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      background:#fff;
+      border-radius:1.1rem;
+      border:1px solid rgba(148,163,184,0.12);
+      box-shadow:0 10px 28px rgba(15,23,42,0.06);
+      z-index:0;
+    }
+    .practice-dashboard__matrix tbody td{ position:relative; z-index:1; padding:.7rem .5rem; text-align:center; background:transparent; }
+    .practice-dashboard__matrix tbody td:last-child{ padding-right:1.2rem; }
     .practice-dashboard__cell{
       position:relative;
       width:100%;
       min-width:3.2rem;
-      padding:.45rem .55rem;
+      padding:.55rem .65rem;
       border-radius:.55rem;
       border:1px solid transparent;
       font-weight:600;
@@ -721,7 +731,7 @@
     .practice-dashboard__cell--empty{ font-weight:500; color:#94a3b8; }
     .practice-dashboard__cell[data-has-note="1"]::after{ content:""; position:absolute; top:8px; right:8px; width:8px; height:8px; border-radius:999px; background:#38bdf8; }
     .practice-dashboard__cell:focus-visible{ outline:3px solid var(--accent-200); outline-offset:2px; }
-    .practice-dashboard__hint{ font-size:.8rem; color:#64748b; text-align:right; margin-top:.4rem; }
+    .practice-dashboard__hint{ font-size:.78rem; color:#64748b; text-align:right; margin-top:.6rem; }
     .practice-dashboard__chart-option{ display:flex; align-items:center; gap:.55rem; padding:.35rem .75rem; border-radius:.75rem; background:#f8fafc; border:1px solid rgba(148,163,184,0.35); font-size:.85rem; color:#1f2937; width:100%; transition:background .15s ease,border-color .15s ease,box-shadow .15s ease; }
     .practice-dashboard__chart-option:hover{ background:#e2e8f0; border-color:rgba(148,163,184,0.55); box-shadow:0 4px 12px rgba(15,23,42,0.08); }
     .practice-dashboard__chart-option input{ accent-color:var(--accent-600); }
@@ -754,10 +764,10 @@
     .practice-dashboard__save-button:hover{ background:#16a34a; box-shadow:0 10px 26px rgba(22,163,74,0.32); }
     .practice-dashboard__save-button:focus-visible{ outline:3px solid rgba(34,197,94,0.35); outline-offset:2px; }
     @media (max-width: 1024px){
-      .practice-dashboard__card{ width:min(100%,calc(100vw - 1.5rem)); padding:1.75rem clamp(1.1rem,4vw,2rem); }
-      .practice-dashboard__body{ padding-right:0; margin-right:0; gap:1.6rem; }
-      .practice-dashboard__header{ flex-direction:column; align-items:flex-start; gap:1rem; padding:1.15rem clamp(1rem,3vw,1.35rem); }
-      .practice-dashboard__header-actions{ width:100%; justify-content:space-between; padding:.75rem 1rem; }
+      .practice-dashboard__card{ width:min(100%,calc(100vw - 1.5rem)); }
+      .practice-dashboard__body{ padding-right:0; margin-right:0; gap:1.5rem; }
+      .practice-dashboard__header{ flex-direction:column; align-items:flex-start; gap:1.15rem; padding:1.25rem clamp(1rem,3vw,1.45rem); }
+      .practice-dashboard__header-actions{ width:100%; justify-content:flex-start; padding:0; min-width:0; }
     }
     @media (max-width: 768px){
       .practice-dashboard.goal-modal{ padding:0; align-items:stretch; }
@@ -768,11 +778,11 @@
       .practice-dashboard__view-toggle{ width:100%; justify-content:space-between; }
       .practice-dashboard__view-btn{ flex:1 1 auto; text-align:center; }
       .practice-dashboard__filter-select{ width:100%; }
-      .practice-dashboard__chart-card{ min-height:150px; padding:1rem 1.1rem 1.25rem; }
+      .practice-dashboard__chart-card{ min-height:150px; padding:1rem 1.1rem 1.2rem; }
       .practice-dashboard__chart-canvas{ min-width:min(520px,100%); min-height:140px; }
         .practice-dashboard__chart-actions{ flex-direction:column; align-items:stretch; gap:.75rem; }
         .practice-dashboard__chart-controls{ justify-content:flex-start; }
-      .practice-dashboard__table-wrapper{ box-shadow:0 10px 24px rgba(15,23,42,0.08); }
+      .practice-dashboard__table-wrapper{ box-shadow:0 10px 24px rgba(15,23,42,0.08); padding:0; }
       .practice-dashboard__hint{ text-align:left; }
       .practice-dashboard__footer{ flex-direction:column; align-items:stretch; gap:.65rem; }
       .practice-dashboard__footer-actions{ justify-content:flex-end; }
@@ -783,11 +793,12 @@
       .practice-dashboard__subtitle{ font-size:.9rem; }
       .practice-dashboard__section{ padding:1.35rem clamp(1rem,4vw,1.6rem); }
       .practice-dashboard__chart-scroll{ padding:.6rem; }
-      .practice-dashboard__matrix{ min-width:0; }
+      .practice-dashboard__matrix{ min-width:0; border-spacing:0; }
       .practice-dashboard__matrix thead{ display:none; }
       .practice-dashboard__matrix tbody{ display:flex; flex-direction:column; gap:1rem; }
       .practice-dashboard__matrix tbody tr{ display:flex; flex-direction:column; gap:.85rem; padding:1rem clamp(.75rem,4vw,1.25rem); border-radius:1rem; background:#fff; box-shadow:0 12px 28px rgba(15,23,42,0.08); border:1px solid rgba(148,163,184,0.2); }
-      .practice-dashboard__matrix-consigne{ padding:0; }
+      .practice-dashboard__matrix tbody tr::before{ display:none; }
+      .practice-dashboard__matrix-consigne{ padding:0; border:0; box-shadow:none; }
       .practice-dashboard__matrix tbody td{ padding:0; text-align:left; }
       .practice-dashboard__cell{ width:100%; min-width:0; justify-content:flex-start; align-items:flex-start; gap:.4rem; text-align:left; font-size:.95rem; padding:.65rem .7rem; }
       .practice-dashboard__cell::before{ content:attr(data-label); font-size:.7rem; font-weight:600; letter-spacing:.08em; text-transform:uppercase; color:#94a3b8; }
