--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
     .practice-dashboard.goal-modal .modal-card{ padding:0; background:transparent; box-shadow:none; border:0; }
     .practice-dashboard__card{
       position:relative;
-      width:min(1240px,96vw);
-      max-height:min(94vh,980px);
+      width:min(1340px,96vw);
+      max-height:min(96vh,1000px);
       display:grid;
       grid-template-rows:auto 1fr auto;
       gap:0;
@@ -684,14 +684,15 @@
       overflow:auto;
       box-shadow:none;
       scrollbar-color:#94a3b8 rgba(226,232,240,0.65);
-      padding:.35rem .4rem .55rem;
+      padding:.5rem .6rem .7rem;
     }
     .practice-dashboard__table-wrapper::-webkit-scrollbar{ height:10px; }
     .practice-dashboard__table-wrapper::-webkit-scrollbar-thumb{ background:rgba(148,163,184,0.45); border-radius:999px; }
-    .practice-dashboard__matrix{ width:100%; border-collapse:separate; border-spacing:0 .45rem; table-layout:fixed; min-width:0; }
-    .practice-dashboard__matrix thead th{ position:sticky; top:0; background:var(--dashboard-header-bg); padding:.75rem .85rem; text-align:left; font-size:.68rem; text-transform:uppercase; letter-spacing:.08em; color:#64748b; border-bottom:1px solid rgba(148,163,184,0.18); z-index:2; }
-    .practice-dashboard__matrix-head-consigne{ width:26%; }
-    .practice-dashboard__matrix-consigne{ background:transparent; padding:.95rem 1.25rem .95rem 1.2rem; font-weight:600; color:#0f172a; text-align:left; border-right:1px solid rgba(148,163,184,0.12); }
+    .practice-dashboard__matrix{ width:100%; border-collapse:separate; border-spacing:0 .75rem; table-layout:fixed; min-width:0; }
+    .practice-dashboard__matrix thead th{ position:sticky; top:0; background:var(--dashboard-header-bg); padding:.75rem 1rem; text-align:left; font-size:.68rem; text-transform:uppercase; letter-spacing:.08em; color:#64748b; border-bottom:1px solid rgba(148,163,184,0.18); z-index:2; }
+    .practice-dashboard__matrix-head-consigne{ width:26%; left:0; z-index:3; box-shadow:2px 0 0 0 rgba(148,163,184,0.14); }
+    .practice-dashboard__matrix thead th.practice-dashboard__matrix-head-consigne{ position:sticky; background:var(--dashboard-header-bg); }
+    .practice-dashboard__matrix-consigne{ position:sticky; left:0; background:#fff; padding:1.05rem 1.45rem 1.05rem 1.35rem; font-weight:600; color:#0f172a; text-align:left; border-right:1px solid rgba(148,163,184,0.12); z-index:2; box-shadow:2px 0 0 rgba(148,163,184,0.08); min-width:16rem; }
     .practice-dashboard__row-meta{ position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0; }
     .practice-dashboard__consigne-name{ font-size:.95rem; }
     .practice-dashboard__matrix tbody tr{ position:relative; }
@@ -705,8 +706,8 @@
       box-shadow:0 10px 28px rgba(15,23,42,0.06);
       z-index:0;
     }
-    .practice-dashboard__matrix tbody td{ position:relative; z-index:1; padding:.7rem .5rem; text-align:center; background:transparent; }
-    .practice-dashboard__matrix tbody td:last-child{ padding-right:1.2rem; }
+    .practice-dashboard__matrix tbody td{ position:relative; z-index:1; padding:.85rem .7rem; text-align:center; background:transparent; }
+    .practice-dashboard__matrix tbody td:last-child{ padding-right:1.35rem; }
     .practice-dashboard__cell{
       position:relative;
       width:100%;
