--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
       }
 
       const storedTarget = readStoredInstallTarget();
-      if (storedTarget && isStandaloneDisplay) {
-        const normalized = storedTarget.replace(/^#/, "");
-        window.location.hash = normalized;
+      if (isStandaloneDisplay) {
+        const targetHash = storedTarget || "#/daily";
+        const normalized = targetHash.replace(/^#/, "");
+        if (window.location.hash !== `#${normalized}`) {
+          window.location.hash = normalized;
+        }
         return;
       }
 
